k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sendingservice
spec:
  selector:
    app: sendingservice
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
  type: ClusterIP
